# toyscript

./: .gitattributes  .gitignore  Cargo.toml  README.md
docs/: intro.md  toyir.md  types.md
lib/leb128/src/: lib.rs  tests.rs
lib/token/src/: lib.rs  tests.rs  utf8.rs
tas/: Cargo.toml
tas/src/: main.rs
tests/: add.ts  add.wat  chars.ts  fib.ts  fib1.ts  fib2.ts  hello.wat  infer.ts  std.ts  test.ts
toyassembly/: Cargo.toml  build.rs
toyassembly/src/: lib.rs
toyassembly/src/_generated/: opcode.rs  valtype.rs
toyassembly/src/asm/: code.rs  expr.rs
toyassembly/src/ast/: data.rs  elem.rs  export.rs  function.rs  global.rs  identifier.rs  import.rs  literal.rs  memory.rs  mod.rs  start.rs  table.rs  tests.rs  types.rs
toyir/: Cargo.toml  build.rs
toyir/src/: asm.rs  error.rs  function.rs  import.rs  lib.rs  module.rs  opt.rs
toyscript/: Cargo.toml  build.rs
toyscript/src/: lib.rs
toyscript/src/ast/: block.rs  class.rs  decoration.rs  decorator.rs  expression.rs  float.rs  function.rs  identifier.rs  integer.rs  mod.rs  statement.rs  typeparam.rs  variable.rs
toyscript/src/cg/: class.rs  function.rs  mod.rs  scope.rs
toyscript/src/error/: compile_error.rs  mod.rs
toyscript/src/keyword/: _keyword.rs  keyword.txt  mod.rs
toyscript/src/tests/: mod.rs
toyscript/src/tir/: _opcode.rs  asm.rs  code.rs  error.rs  function.rs  mod.rs  module.rs  opcode.txt  opt.rs
toyscript/src/types/: class.rs  function.rs  index.rs  integer.rs  mod.rs  primitive.rs  primitive.txt  string.rs  var.rs
tsc/: Cargo.toml
tsc/src/: main.rs
(+39 files in other folders)
