[package]
name = "toyscript"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = []

[dependencies]
token = { path = "../lib/token" }
toyir = { path = "../toyir" }
leb128 = { path = "../lib/leb128" }
toyassembly = { path = "../toyassembly" }
